--- a/registrar.html
+++ b/registrar.html
@@ -18,7 +18,7 @@
     </style>
   </head>
   <body>
-    <form class="contenedor" action="/registrar" method="post" id='formularioregistro'>
+    <form autocomplete="off" class="contenedor" action="/registrar" method="post" id='formularioregistro'>
       <input type="number" name='documento' id="documento" placeholder="Documento del cliente" autofocus> <img id='alert1' src="alert" alt="Alert" style="width:16px;height:16px;"><br>
       <input type="date" name='nacimiento' id="nacimiento"> <img id='alert2' src="alert" alt="Alert" style="width:16px;height:16px;"><br>
       <select name='sexo' id='sexo' style='width:30%'>
