--- a/indexdynamicdata.html
+++ b/indexdynamicdata.html
@@ -236,28 +236,25 @@
   //MOSTRAR TABLA
   $('#cargar').click( function() {
     //CARGO DINAMICAMENTE LOS PRODUCTOS
-    $.get("./productos.txt", function(response) {
+    $.getJSON("productos.json", function(response) {
      var sel = $('<select>').attr('id', "items").attr('size', "15").appendTo('#contenedoritems1');
      var prodfile = response;
-     var categoriasitem = prodfile.split('/');
-     var productos = [];
-     var subcategorias = [];
-     for (var i = 0; i<categoriasitem.length; i++) {
-       subcategorias.push(categoriasitem[i].substring(0, categoriasitem[i].indexOf('.')));
-       sel.append($("<optgroup>").attr('label',subcategorias[i]));
-       var productostemp = categoriasitem[i].substring(categoriasitem[i].indexOf('.')+1).split(',');
-       for(var j = 0; j<productostemp.length; j++) {
-         sel.append($("<option>").attr('value',productostemp[j]).text(productostemp[j].split('|')[0]));
+     console.log(Object.keys(response).length);
+     $.each(response, function(categoria){
+       console.log(categoria);
+       sel.append($("<optgroup>").attr('label',categoria));
+       console.log(response[categoria]);
+       for (var i = 0; i<response[categoria].length; i++) {
+         sel.append($("<option>").attr('value', [response[categoria][i].valor,response[categoria][i].dbid]).text(response[categoria][i].nombre));
        }
-       console.log(productostemp);
-     }
+     })
      $('#items').dblclick(function() {
-       var itemagregado = $(this).val().split("|");
-       consumos[itemagregado[2]]++;
-       console.log(consumos);
-       var markup = "<tr class='" + itemagregado[2] + "'><td>" + itemagregado[0] + "</td><td><span class='cantitem' style='color:white'>1</span><input class='sumarmismoitem' type='button' value='+'><input class='quitarmismoitem' type='button' value='-'></td><td class='monto'>" + itemagregado[1] + "</td><td> <input class='quitardelista' type='button' value='Quitar'></td></tr>";
+       itemval = $(this).val().split(',');
+       consumos[itemval[1]]++;
+       console.log($(this).text());
+       var markup = "<tr class='" + itemval[1] + "'><td>" + $(this).text() + "</td><td><span class='cantitem' style='color:white'>1</span><input class='sumarmismoitem' type='button' value='+'><input class='quitarmismoitem' type='button' value='-'></td><td class='monto'>" + itemval[0] + "</td><td> <input class='quitardelista' type='button' value='Quitar'></td></tr>";
        $("#listaitems tr:last").prev('tr').after(markup);
-       var montototal = Number(itemagregado[1]) + Number($('#totalmonto').html());
+       var montototal = Number(itemval[0]) + Number($('#totalmonto').html());
        $('#totalmonto').html(montototal);
      })
     });
@@ -266,28 +263,25 @@
   });
   $('#usar').click( function() {
     //CARGO DINAMICAMENTE LOS PRODUCTOS
-    $.get("./productos.txt", function(response) {
+    $.getJSON("productos.json", function(response) {
      var sel = $('<select>').attr('id', "items").attr('size', "15").appendTo('#contenedoritems2');
      var prodfile = response;
-     var categoriasitem = prodfile.split('/');
-     var productos = [];
-     var subcategorias = [];
-     for (var i = 0; i<categoriasitem.length; i++) {
-       subcategorias.push(categoriasitem[i].substring(0, categoriasitem[i].indexOf('.')));
-       sel.append($("<optgroup>").attr('label',subcategorias[i]));
-       var productostemp = categoriasitem[i].substring(categoriasitem[i].indexOf('.')+1).split(',');
-       for(var j = 0; j<productostemp.length; j++) {
-         sel.append($("<option>").attr('value',productostemp[j]).text(productostemp[j].split('|')[0]));
+     console.log(Object.keys(response).length);
+     $.each(response, function(categoria){
+       console.log(categoria);
+       sel.append($("<optgroup>").attr('label',categoria));
+       console.log(response[categoria]);
+       for (var i = 0; i<response[categoria].length; i++) {
+         sel.append($("<option>").attr('value', [response[categoria][i].valor,response[categoria][i].dbid]).text(response[categoria][i].nombre));
        }
-       console.log(productostemp);
-     }
+     })
      $('#items').dblclick(function() {
-       var itemagregado = $(this).val().split("|");
-       consumos[itemagregado[2]]++;
-       console.log(consumos);
-       var markup = "<tr class='" + itemagregado[2] + "'><td>" + itemagregado[0] + "</td><td><span class='cantitem' style='color:white'>1</span><input class='sumarmismoitem' type='button' value='+'><input class='quitarmismoitem' type='button' value='-'></td><td class='monto'>" + itemagregado[1] + "</td><td> <input class='quitardelista' type='button' value='Quitar'></td></tr>";
+       itemval = $(this).val().split(',');
+       consumos[itemval[1]]++;
+       console.log($(this).text());
+       var markup = "<tr class='" + itemval[1] + "'><td>" + $(this).text() + "</td><td><span class='cantitem' style='color:white'>1</span><input class='sumarmismoitem' type='button' value='+'><input class='quitarmismoitem' type='button' value='-'></td><td class='monto'>" + itemval[0] + "</td><td> <input class='quitardelista' type='button' value='Quitar'></td></tr>";
        $("#listaitems2 tr:last").prev('tr').after(markup);
-       var montototal = Number(itemagregado[1]) + Number($('#totalmonto2').html());
+       var montototal = Number(itemval[0]) + Number($('#totalmonto2').html());
        $('#totalmonto2').html(montototal);
      })
     });
