--- a/indexdynamicdata.html
+++ b/indexdynamicdata.html
@@ -7,10 +7,12 @@
     <style>
       body {color: white; background-image: url('beerland.png'); background-color: black; background-repeat: no-repeat; background-attachment: fixed; background-position: center}
       .botones3 {
+        font-size: 6vh;
         width: 33%;
         height: 100%;
       }
       .botones2 {
+        font-size: 6vh;
         width: 49%;
         height: 100%;
       }
@@ -488,7 +490,7 @@
     $('#edittable').fadeIn();
     $('#guardarcambios').fadeIn();
     $('#guardarcambios').on('click', function() {
-      
+
     })
   })
 
