--- a/indexdynamicdata.html
+++ b/indexdynamicdata.html
@@ -5,7 +5,7 @@
     <title>Beerland sistema de puntos</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <style>
-      body {color: white; background-image: url('beerland.png'); background-color: black; background-repeat: no-repeat; background-attachment: fixed; background-position: center}
+      body {color: white; background-image: url('beerland.png'); font-size: 4vh; background-color: black; background-repeat: no-repeat; background-attachment: fixed; background-position: center}
       .botones3 {
         font-size: 6vh;
         width: 33%;
@@ -53,7 +53,7 @@
         opacity: 0%;
       	left: 5%;
       	top: 10%;
-      	width: 50%;
+      	width: 60%;
       	height: 50%;
         z-index: 999;
         background-color: transparent
@@ -63,6 +63,8 @@
         opacity: 50%;
         width: 100%;
       }
+      .listaitems td:first-child { width:50%}
+      .listaitems td:last-child { width:10%}
       .listaitems tr:nth-child(even){background-color: #111111;}
       .listaitems tr:hover {background-color: #222222;}
       .items {
@@ -86,8 +88,8 @@
       .monto {
         text-align: center;
       }
-      .sumarmismoitem {text-align:center; position:absolute; right: 50%; width:5%; background-color: #109010; color: white}
-      .quitarmismoitem {text-align:center;position: absolute; right: 45%;width:5%; background-color: #901010; color: white}
+      .sumarmismoitem {text-align:center; position:absolute; right: 30%; width:5%; height: 4vh; background-color: #109010; color: white}
+      .quitarmismoitem {text-align:center;position: absolute; right: 25%;width:5%; height: 4vh; background-color: #901010; color: white}
       .total {text-align: center;}
       select {
         width:100%;
@@ -97,6 +99,8 @@
       select[multiple] {
         overflow-y: auto;
       }
+      select option:nth-child(odd) {background-color: #030303;}
+      select optgroup {background-color: #222222; font-size: 3vh}
     </style>
   </head>
   <body id='body'>
