--- a/indexdynamicdata.html
+++ b/indexdynamicdata.html
@@ -28,6 +28,12 @@
         height: 20%;
         bottom: 1%
       }
+      .botonfijo2 {
+        position: fixed;
+        bottom: 12vh;
+        height: 5vh;
+        right: 5vh
+      }
       .botonfijo {
         position: fixed;
         bottom: 6vh;
@@ -202,6 +208,7 @@
     <input type="button" id="editar" value="Editar productos"style='position:fixed;right:0%;top:0%;z-index:1000'>
     <div id='editdiv' style='z-index:997'>
       <input class='botonfijo' type="button" id="guardarcambios" value="Guardar cambios">
+      <input class='botonfijo2' type="button" id="agregarproducto" value="Agregar Producto">
     </div>
 
   </body>
@@ -219,6 +226,7 @@
   $('#cargarpuntos').hide();
   $('#usarpuntos').hide();
   $('#guardarcambios').hide();
+  $('#agregarproducto').hide();
 
   //FUNCIONES PARA REGISTRAR CONSUMO
   //MOSTRAR TABLA
@@ -498,6 +506,31 @@
        }
      })
 
+     $('#edittable').on('click', '.quitardelista', function() {
+       $(this).closest('tr').remove();
+     })
+
+     $('#agregarproducto').on('click', function() {
+       sel.append($("<tr>").append($("<input>").attr('type', 'text')));
+       $("tr:last").append($("<td>").append($("<input>").attr('type', 'number')));
+       $("tr:last").append($("<td>").append($("<select>")));
+       $("tr:last").find('select').append($('<option>').attr('label', 'Categoría'));
+       console.log(response[Object.keys(response)[0]][0]["dbid"])
+       for (var i = 0; i < Object.keys(response).length; i++) {
+         $("tr:last").find('select').append($('<option>').attr({value: response[Object.keys(response)[i]][0]["dbid"]}).text(Object.keys(response)[i]));
+       }
+       $("tr:last").append($("<td>").append($("<input>").attr({class:'quitardelista', type:'button', value:'Quitar'})));
+       $("tr:last").append($("<span>").attr({style: 'opacity:0'}).html(0));
+       window.scrollTo(0,document.body.scrollHeight);
+       $('select').on('change', function() {
+         $(this).parent().parent().find('span').html($(this).val());
+         $(this).parent().text($('option:selected', this).text());
+         console.log($('option:selected', this).text());
+       })
+     })
+
+
+
      $('#guardarcambios').on('click', function() {
        var updated = new Object();
        var table = $('#edittable');
@@ -505,11 +538,11 @@
          updated[$(this).find(':last-child').prev().prev().text()] = [];
        });
        table.children().each(function(i,o){
-        //console.log(updated);
         var item = $(this).find('input').val();
         var valor = $(this).find('input').eq(1).val();
         var dbid = $(this).find('span').text();
         itempush = {'nombre': item, 'valor': Number(valor), 'dbid': Number(dbid)};
+        console.log($(this).find(':last-child').prev().prev().text());
 
         updated[$(this).find(':last-child').prev().prev().text()].push(itempush);
         //console.log($(this).find('td input').val());
@@ -528,6 +561,7 @@
 
     $('#edittable').fadeIn();
     $('#guardarcambios').fadeIn();
+    $('#agregarproducto').fadeIn();
   })
 
   jQuery(function($){
