--- a/indexdynamicdata.html
+++ b/indexdynamicdata.html
@@ -32,12 +32,14 @@
         position: fixed;
         bottom: 12vh;
         height: 5vh;
+        width: 20vh;
         right: 5vh
       }
       .botonfijo {
         position: fixed;
         bottom: 6vh;
         height: 5vh;
+        width: 20vh;
         right: 5vh
       }
       .front {
@@ -100,10 +102,13 @@
       .monto {
         text-align: center;
       }
-      .sumarmismoitem {text-align:center; position:absolute; right: 30%; width:5%; height: 4vh; background-color: #109010; color: white}
-      .quitarmismoitem {text-align:center;position: absolute; right: 25%;width:5%; height: 4vh; background-color: #901010; color: white}
+      .preloader {position: fixed;left: 0px;width:100%;height:100%;background-color: black;z-index: 1100; opacity: 100%}
+      .sumarmismoitem {text-align:center; position:absolute; right: 32%; width:5%; height: 4vh; background-color: #109010; color: white}
+      .quitarmismoitem {text-align:center;position: absolute; right: 27%;width:5%; height: 4vh; background-color: #901010; color: white}
       .total {text-align: center;}
-      input[type=text],input[type=number],input[type=date] {color: white; background-color: transparent}
+      input[type=text],input[type=number],input[type=date] {color: white; background-color: transparent;border: 0px}
+      input[type=number] {text-align: right;}
+      input [type=button] {-moz-border-radius:6px;-webkit-border-radius:6px;border-radius: 6px}
       select {
         width:100%;
         background-color: #101010;
@@ -114,15 +119,17 @@
       }
       select option:nth-child(odd) {background-color: #030303;}
       select optgroup {background-color: #222222; font-size: 3vh}
+      table, td, th {border: 1px solid white; border-collapse: collapse;}
     </style>
   </head>
   <body id='body'>
+    <div class='preloader'><img style='vertical-align:middle;margin-left:auto;margin-right:auto;display:block' src="preloader" alt="Cargando..."></div>
     <input id='inputtarjeta' class='invisible' type="text" autocomplete="off" autofocus>
     <div class="cliente" id="cliente">
       <div class="botonescli">
         <input class="botones3" type="button" id="cargar" value="Cargar puntos">
         <input class="botones3" type="button" id="usar" value="Usar puntos">
-        <input class="botones3" type="button" id="eliminarthis" value="Eliminar este cliente">
+        <input class="botones3" style='background-color:#c90a00; border:#c90a00' type="button" id="eliminarthis" value="Eliminar este cliente">
       </div>
       <div class="contenedor" id="contenedor">
         <table style="width:100%; margin: 0px; opacity: 0%">
@@ -199,8 +206,8 @@
 
     <div class='front' id='front'>
       <div class="botonesfront">
-        <input class="botones2" type="button" id="registrar" value="Registrar usuario nuevo">
-        <input class="botones2" type="button" id="eliminar" value="Eliminar cliente">
+        <input class="botones2" style='background-color:#00cc00; border:#00cc00' type="button" id="registrar" value="Registrar usuario nuevo">
+        <input class="botones2" style='background-color:#c90a00; border:#c90a00' type="button" id="eliminar" value="Eliminar cliente">
       </div>
       <div style="padding-top: 15%; text-align: center">DESLICE TARJETA PARA COMENZAR</div>
     </div>
@@ -487,9 +494,10 @@
 
   //FUNCIONALIDAD DE EDITAR PRODUCTOS (guardados en un json)
   $('#editar').on('click', function() {
+    $('.preloader').show();
     $('#editar').fadeOut();
-    $('#inputtarjeta').fadeOut();
-    $('#front').fadeOut();
+    $('#inputtarjeta').hide();
+    $('#front').hide();
     $.getJSON("productos.json", function(response) {
       console.log(response);
      var sel = $('<table>').attr('id', "edittable").appendTo('#editdiv');
@@ -559,6 +567,7 @@
      });
     });
 
+    $('.preloader').fadeOut('slow');
     $('#edittable').fadeIn();
     $('#guardarcambios').fadeIn();
     $('#agregarproducto').fadeIn();
@@ -587,12 +596,14 @@
     });
     socket.on('datoscliente', function(cliente){
       yeet();
+      $('.preloader').show();
       $('#cliente').fadeIn('fast');
       $('#editar').hide();
       $('#documento').html(cliente[0].documento);
       $('#tarjeta').html(cliente[0].tarjeta);
       $('#nacimiento').html(cliente[0].nacimiento.slice(0,10));
       $('#puntos').html(cliente[0].puntos);
+      $('.preloader').fadeOut();
     })
     socket.on('registrartarjetanueva', function(tarjeta) {
       $("#body").load("./registrar", function() {
@@ -609,4 +620,8 @@
   function yeet() {
     $("#front").hide();
   }
+
+  $( document ).ready(function() {
+    $('.preloader').fadeOut();
+  });
 </script>
