--- a/registrar.html
+++ b/registrar.html
@@ -13,7 +13,9 @@
         color: white
       }
       select, input {
-        margin: 2vh
+        margin: 2vh;
+        color: white;
+        border: 2px solid white
       }
     </style>
   </head>
