--- a/registrar.html
+++ b/registrar.html
@@ -13,9 +13,7 @@
         color: white
       }
       select, input {
-        margin: 2vh;
-        color: white;
-        border: 2px solid white
+        margin: 2vh
       }
     </style>
   </head>
