--- a/indexdynamicdata.html
+++ b/indexdynamicdata.html
@@ -5,7 +5,7 @@
     <title>Beerland sistema de puntos</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <style>
-      body {font: 4vh calibri; color: white; background-image: url('beerland.png'); font-size: 4vh; background-color: black; background-repeat: no-repeat; background-attachment: fixed; background-position: center}
+      body {color: white; background-image: url('beerland.png'); font-size: 4vh; background-color: black; background-repeat: no-repeat; background-attachment: fixed; background-position: center}
       .botones3 {
         font-size: 6vh;
         width: 33%;
@@ -97,7 +97,6 @@
         border: none;
         z-index: 998;
         padding: 0px;
-        color: black !important;
         margin: 0px
       }
       .monto {
@@ -107,7 +106,7 @@
       .sumarmismoitem {text-align:center; position:absolute; right: 32%; width:5%; height: 4vh; background-color: #109010; color: white}
       .quitarmismoitem {text-align:center;position: absolute; right: 27%;width:5%; height: 4vh; background-color: #901010; color: white}
       .total {text-align: center;}
-      input[type=text],input[type=number],input[type=date] {font-size: 3vh;color: white; background-color: transparent;border: 0px}
+      input[type=text],input[type=number],input[type=date] {color: white; background-color: transparent;border: 0px}
       input[type=number] {text-align: right;}
       input [type=button] {-moz-border-radius:6px;-webkit-border-radius:6px;border-radius: 6px}
       select {
@@ -120,7 +119,7 @@
       }
       select option:nth-child(odd) {background-color: #030303;}
       select optgroup {background-color: #222222; font-size: 3vh}
-      table, td, th, tr {border: 1px solid white; border-collapse: collapse;}
+      table, td, th {border: 1px solid white; border-collapse: collapse;}
     </style>
   </head>
   <body id='body'>
@@ -210,12 +209,12 @@
         <input class="botones2" style='background-color:#00cc00; border:#00cc00' type="button" id="registrar" value="Registrar usuario nuevo">
         <input class="botones2" style='background-color:#c90a00; border:#c90a00' type="button" id="eliminar" value="Eliminar cliente">
       </div>
-      <div style="padding-top: 10%; text-align: center">DESLICE TARJETA PARA COMENZAR</div>
+      <div style="padding-top: 15%; text-align: center">DESLICE TARJETA PARA COMENZAR</div>
     </div>
 
     <input type="button" id="editar" value="Editar productos"style='position:fixed;right:0%;top:0%;z-index:1000'>
     <div id='editdiv' style='z-index:997'>
-      <input class='botonfijo' style='background-color:#00cc00; border:#00cc00' type="button" id="guardarcambios" value="Guardar cambios">
+      <input class='botonfijo' type="button" id="guardarcambios" value="Guardar cambios">
       <input class='botonfijo2' type="button" id="agregarproducto" value="Agregar Producto">
     </div>
 
@@ -592,12 +591,12 @@
     $('#inputtarjeta').on('keypress',function(e) {
         if(e.which == 13) {
             socket.emit('cargarcliente', $('#inputtarjeta').val());
-            $('.preloader').show();
-            $('#inputtarjeta').hide();
+            $('#inputtarjeta').fadeOut();
         }
     });
     socket.on('datoscliente', function(cliente){
       yeet();
+      $('.preloader').show();
       $('#cliente').fadeIn('fast');
       $('#editar').hide();
       $('#documento').html(cliente[0].documento);
