--- a/indexdynamicdata.html
+++ b/indexdynamicdata.html
@@ -106,7 +106,7 @@
       .total {text-align: center;}
       input[type=text],input[type=number],input[type=date] {font-size: 3vh;color: white; background-color: transparent;border: 0px}
       input[type=number] {text-align: right;}
-      input [type=button] {-moz-border-radius:6px;-webkit-border-radius:6px;border-radius: 6px}
+      input [type=button] {background-color: black;-moz-border-radius:6px;-webkit-border-radius:6px;border-radius: 6px}
       select {
         width:100%;
         background-color: #101010;
@@ -497,7 +497,7 @@
     $('#front').hide();
     $.getJSON("productos.json", function(response) {
       console.log(response);
-     var sel = $('<table>').attr('id', "edittable").appendTo('#editdiv');
+     var sel = $('<table>').attr('id', "edittable").attr('class','listaitems').appendTo('#editdiv');
      sel.append($("<tr>").text("ITEM"));
      $("tr:last").append($("<td>").text("PRECIO"));
      $("tr:last").append($("<td>").text("CATEGORIA"));
