--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
       <div style="padding-top: 15%; text-align: center">DESLICE TARJETA PARA COMENZAR</div>
     </div>
 
+    <input type="button" id="inicio" value="Inicio" style='position:fixed;left:0%;top:0%;z-index:1000;margin:1vw'>
     <input type="button" id="editar" value="Editar productos"style='position:fixed;right:0%;top:0%;z-index:1000'>
     <div id='editdiv' style='z-index:997'>
       <div id='edittable' style='width:50%'>
