--- a/indexdynamicdata.html
+++ b/indexdynamicdata.html
@@ -129,6 +129,51 @@
       select option:nth-child(odd) {background-color: #030303;}
       select optgroup {background-color: #222222; font-size: 3vh}
       table, td, th, tr {border: 1px solid white; border-collapse: collapse;}
+
+      img {
+        border-radius: 10%;
+        transition: transform .2s;
+      }
+
+      img:hover {
+        transform: scale(1.1);
+      }
+
+      .row {
+        display: flex;
+        flex-wrap: wrap;
+        padding: 0 4px;
+        margin-top: 3vh;
+      }
+
+      /* Create four equal columns that sits next to each other */
+      .column {
+        flex: 20%;
+        max-width: 20%;
+        padding: 0 4px;
+      }
+
+      .column img {
+        margin-top: 8px;
+        vertical-align: middle;
+        width: 100%;
+      }
+
+      /* Responsive layout - makes a two column-layout instead of four columns */
+      @media screen and (max-width: 800px) {
+        .column {
+          flex: 25%;
+          max-width: 25%;
+        }
+      }
+
+      /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+      @media screen and (max-width: 600px) {
+        .column {
+          flex: 50%;
+          max-width: 50%;
+        }
+      }
     </style>
   </head>
   <body id='body'>
@@ -188,27 +233,24 @@
     </div>
 
     <div class="cliente" id='usarpuntos'>
-      <form class="contenedor" method="post">
-        <table class='listaitems' id='listaitems2'>
-          <tr>
-            <th>Item</th>
-            <th>Cantidad</th>
-            <th>Precio</th>
-            <th></th>
-          </tr>
-          <tr>
-            <th>Total</th>
-            <th> </th>
-            <th class='total' id='totalmonto2'></th>
-            <th> </th>
-          </tr>
-        </table>
-        <input style='position:absolute; right:0%' type="button" id="enviarpuntosgastados" value="Usar">
+      <form method="post">
+        <div class="row">
+          <div class="column">
+            <img src="gorra.jpg" onclick='gastar(350)'>
+          </div>
+          <div class="column">
+            <img src="remera.jpg" onclick='gastar(450)'>
+          </div>
+          <div class="column">
+            <img src="growler.jpg" onclick='gastar(250)'>
+          </div>
+          <div class="column">
+            <img src="destapador.jpg" onclick='gastar(150)'>
+          </div>
+        </div>
         <p>Puntos disponibles: <a id='puntosdisponibles'></a></p>
       </form>
-
-      <div class="items" id='contenedoritems2'>
-      </div>
+    </div>
 
     </div>
 
@@ -273,6 +315,7 @@
     $('#cliente').fadeOut('slow');
   });
   $('#usar').click( function() {
+  /*
     //CARGO DINAMICAMENTE LOS PRODUCTOS
     $.getJSON("productos.json", function(response) {
      var sel = $('<select>').attr('id', "items").attr('size', "20").appendTo('#contenedoritems2');
@@ -294,6 +337,7 @@
        $('#totalmonto2').html(montototal);
      })
     });
+    */
     $('#usarpuntos').fadeIn('slow');
     $('#cliente').fadeOut('slow');
     $('#puntosdisponibles').html($('#puntos').html());
@@ -425,59 +469,26 @@
     puntosForm.submit();
   });
   //USAR
-  $('#enviarpuntosgastados').click(function() {
-    event.preventDefault();
-    var puntosForm = jQuery('<form>', {
-        'action': '/gastar',
-        'method': 'post'
-    }).append(jQuery('<input>', {
-        'name': 'tarjeta',
-        'value': $('#tarjeta').html(),
-        'type': 'hidden'
-    }));
-    puntosForm.append(jQuery('<input>', {
-        'name': 'monto',
-        'value': $('#totalmonto2').html(),
-        'type': 'hidden'
-    }));
-    puntosForm.append(jQuery('<input>', {
-        'name': 'comida',
-        'value': consumos[6],
-        'type': 'hidden'
-    }));
-    puntosForm.append(jQuery('<input>', {
-        'name': 'rubia',
-        'value': consumos[0],
-        'type': 'hidden'
-    }));
-    puntosForm.append(jQuery('<input>', {
-        'name': 'negra',
-        'value': consumos[1],
-        'type': 'hidden'
-    }));
-    puntosForm.append(jQuery('<input>', {
-        'name': 'roja',
-        'value': consumos[2],
-        'type': 'hidden'
-    }));
-    puntosForm.append(jQuery('<input>', {
-        'name': 'temporada',
-        'value': consumos[3],
-        'type': 'hidden'
-    }));
-    puntosForm.append(jQuery('<input>', {
-        'name': 'otroalcohol',
-        'value': consumos[4],
-        'type': 'hidden'
-    }));
-    puntosForm.append(jQuery('<input>', {
-        'name': 'salcohol',
-        'value': consumos[5],
-        'type': 'hidden'
-    }))
-    $(document.body).append(puntosForm);
-    puntosForm.submit();
-  })
+  function gastar(cant) {
+      if (confirm("Canjear " + cant + " puntos?")) {
+      event.preventDefault();
+      var puntosForm = jQuery('<form>', {
+          'action': '/gastar',
+          'method': 'post'
+      }).append(jQuery('<input>', {
+          'name': 'tarjeta',
+          'value': $('#tarjeta').html(),
+          'type': 'hidden'
+      }));
+      puntosForm.append(jQuery('<input>', {
+          'name': 'monto',
+          'value': cant,
+          'type': 'hidden'
+      }));
+      $(document.body).append(puntosForm);
+      puntosForm.submit();
+    }
+  }
 
   //ELIMINAR CLIENTE SELECCIONADO POR TARJETA
   $('#eliminarthis').click( function() {
